--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
-	"type": "module",
+	"type": "commonjs",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.15.4",
-		"daisyui": "^1.16.2"
+		"daisyui": "^1.16.2",
+		"uuid": "^7.0.3"
 	}
 }
